--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+<script src="https://code.jquery.com/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  
 
 <div class="posts">
   {% for post in site.posts %}
